# codexray-analyser

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
src/codexray/: __init__.py  analyser.py  analyzer.py  cli.py  config.py  graph.py  limits.py  models.py  offline.py  parsers.py  rules.py
tests/: test_analyser.py  test_analyzer.py  test_cli_output.py  test_graph.py  test_requirements.py
