[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "codexray-analyser"
version = "0.1.2"
description = "Offline-first static analyser for Python files and notebooks."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Mohammad Hamad" }
]
keywords = ["security", "static-analysis", "python", "offline", "notebook"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/Merlins-Sanctum/codexray-analyser"
Repository = "https://github.com/Merlins-Sanctum/codexray-analyser"
Issues = "https://github.com/Merlins-Sanctum/codexray-analyser/issues"

[project.scripts]
codexray = "codexray.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.11.0",
  "build>=1.2.2",
  "twine>=6.1.0",
  "pip-audit>=2.7.0",
  "bandit>=1.7.10",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "S"]
ignore = ["S101"]

[tool.hatch.build.targets.wheel]
packages = ["src/codexray"]
